[gd_scene load_steps=2 format=3 uid="uid://cotmpf33raj18"]

[ext_resource type="Script" path="res://ui/settings_menu/settings_menu.gd" id="1_450ou"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_450ou")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
mouse_filter = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.05

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sfx"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HatsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Close Settings"
